syntax = "proto3";

option go_package = "genprotos/";

package users;

service UserService {
    rpc Register(UserReq) returns (Void) {}
    rpc Login(UserLogin) returns (UserLoginRes) {}
    rpc Update(User) returns (Void) {}
    rpc Delete(ById) returns (Void) {}
    rpc GetById(ById) returns (User) {}
    rpc GetAll(UserFilter) returns (AllUsers) {}
    rpc ChangePassword(ChangePass) returns (Void) {}
    rpc ForgotPassword(ForgotPass) returns (Void) {}
    rpc ResetPassword(ResetPass) returns (Void) {}
}

message ById {
    string id = 1;
}

message Void {}


message UserUpdateSwagger{
    string full_name = 2;
    string address = 4;
    string phone_number = 5;
    string username = 6;
}

message User {
    string id = 1;
    string full_name = 2;
    string email = 3;
    string address = 4;
    string phone_number = 5;
    string username = 6;
    string password_hash = 7;
    string created_at = 8;
    string updated_at = 9;
    int64 deleted_at = 10;
}

message UserReq {
    string full_name = 1;
    string email = 2;
    string address = 3;
    string phone_number = 4;
    string username = 5;
    string password = 6;
}

message UserFilter {
    int32 limit = 1;
    int32 page = 2;
    string full_name = 3;
    string email = 4;
    string address = 5;
}

message UserLogin {
    string username = 1;
    string password = 2;
    string massage = 3;
}

message UserLoginRes {
    string id = 1;
    string full_name = 2;
    string email = 3;
    string address = 4;
    string phone_number = 5;
    string username = 6;
    string storage_id = 7;
}

message ChangePass {
    string id = 1;
    string current_password = 2;
    string new_password = 3;
}

message ForgotPass {
    string email = 1;
}

message ResetPass {
    string id = 1;
    string reset_token = 2;
    string new_password = 3;
}

message AllUsers {
    repeated User users = 1;
    int32 count = 2;
}
